kubernetes/bbox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod.demo
  namespace: default
spec:
  containers:
    - name: bbox
      image: busybox:latest
      imagePullPolicy: IfNotPresent
      command:
        - /bin/sh
        - -c
        - "sleep 86400"
    - name: myapp
      image: ikubernetes/myapp:v1
