kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   namespace: default
spec:
  containers:
   - name: myapp
     image: ikubernetes/myapp:v1
     ports:
       - protocol: TCP
         containerPort: 80 
         name: http
         hostPort: 8081
