kubernetes/poststart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-pod
  namespace: default
spec:
 tolerations:
  - key: node-role.kubernetes.io/master
    operator: Exists
    effect: NoSchedule
 containers:
  - name: busybox-httpd
    image: busybox:latest
    imagePullPolicy: IfNotPresent
    lifecycle:
     postStart:
      exec:
       command:
          - mkdir
          - -p
          - /data/web/html
    command: ["/bin/sh","-c","sleep 3600"]
    #command: ["/bin/httpd"]
     #args: ["-f","-h /data/web/html"]
