kubernetes/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pv-pod
spec:
   containers:
     - name: pv-containers
       image: nginx
       ports:
         - containerPort: 80
           name: "http-server"
       volumeMounts:
         - mountPath: "/usr/share/nginx/html"
           name: pv-storage
   volumes:
     - name: pv-storage
       persitentVolumeClaim:
           claimName: pv-claim
