kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: redis
   namespace: default
spec:
   replicas: 2
   selector:
      matchLabels:
        app: redis
        role: logstor
   template:
      metadata:
        labels:
           app: redis
           role: logstor
      spec:
        tolerations: 
          - key: node-role.kubernetes.io/master
            operator: Exists
            effect: NoSchedule
        containers:
          - name: redis
            image: redis:4.0-alpine
            ports:
             - name: redis
               containerPort: 6379

---
apiVersion: apps/v1
kind: DaemonSet
metadata: 
   name: filebeat-ds
   namespace: default
spec: 
   selector:
      matchLabels:
        app: filebeat	
        release: stable
   template:
      metadata:
        labels:
          app: filebeat
          release: stable
      spec: 
        tolerations:
         - key: node-role.kubernetes.io/master
           operator: Exists
           effect: NoSchedule
        containers:
         - name: filebeat
           image: ikubernetes/filebeat:5.6.5-alpine
