kubernetes/statefulset-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:  
   name: web
spec:  
   serviceName: "nginx"  
   replicas: 2 
   selector:     
     matchLabels:      
        app: nginx  
   template:    
     metadata:      
        labels:        
          app: nginx    
     spec:      
        tolerations:
         - key: node-role.kubernetes.io/master
           operator: Exists
           effect: NoSchedule
        containers:      
         - name: nginx       
           image: nginx:1.9.1      
           ports:   
           - containerPort: 80 
             name: web
           volumeMounts:
           - name: www
             mountPath: "/usr/share/nginx/html"
   volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        storageClassName: nfs
        accessModes:
         - ReadWriteOnce
        resources:
           requests:
             storage: 1Gi
